# Udp-Server-Client-in-rust

./: Cargo.toml
src/: client.rs  lib.rs  main.rs
