[package]
name = "game_udp"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
[[bin]]
name = "game_udp"
path = "src/main.rs"
[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossterm = "0.28.1"
bincode = "1"
